src/test/ui/consts/async-block.stderr
error: `async` blocks are not allowed in constants
  --> $DIR/async-block.rs:5:47
   |
LL | const _: i32 = { core::mem::ManuallyDrop::new(async { 0 }); 4 };
   |                                               ^^^^^^^^^^^

error: aborting due to previous error

